--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,6 @@
     </context-param>
     
     <welcome-file-list>
-        <welcome-file>faces/mock.xhtml</welcome-file>
+        <welcome-file>faces/shipperInfoEntryScreen.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
